# GameOfLife

./: Cargo.toml  README.md  license.html
benches/: benchmark.rs
src/: gameoflife.rs  main.rs
